@@ -1,3 +1,8 @@
+Sat Nov 10 17:51:15 CET 2012  John Tytgat  <John.Tytgat@aaug.net>
+
+	* scl/chunkid02.s (strtod,strtol,strtoul): Add comments.
+	* scl/chunkid05.s (strtof): Enable.
+
 Sat Sep 29 18:02:53 CEST 2012  John Tytgat  <John.Tytgat@aaug.net>
 
 	* Makefile.am (common_src): Add common/attrib.c,
